@@ -1,6 +1,7 @@
 gnome-initial-setup (3.22.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Bump debhelper compat to 10 (automatic autoreconf).
 
  -- Jordi Mallach <jordi@debian.org>  Wed, 03 Aug 2016 12:27:42 +0200
 
